--- a/Desktop/aiwritingtool-landingpage/package.json
+++ b/Desktop/aiwritingtool-landingpage/package.json
@@ -8,7 +8,9 @@
   },
   "scripts": {
     "dev": "start-dev.bat",
-    "build": "node scripts/process-templates.js"
+    "build:css": "npx tailwindcss -i ./lib/tailwind.css -o ./lib/tailwind-built.css --watch",
+    "build:css-prod": "npx tailwindcss -i ./lib/tailwind.css -o ./lib/tailwind-built.css --minify",
+    "build": "npm run build:css-prod && node scripts/process-templates.js"
   },
   "dependencies": {
     "node-fetch": "^2.6.9",
@@ -16,7 +18,10 @@
     "dotenv": "^16.4.1"
   },
   "devDependencies": {
-    "netlify-cli": "^15.0.0"
+    "netlify-cli": "^15.0.0",
+    "tailwindcss": "^3.4.0",
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.32"
   },
   "author": "",
   "license": "MIT"
