Complete TypeScript/React rewrite with Shadcn/UI and dark mode - Create comprehensive TypeScript React app (app-typescript.html) - Implement Shadcn/UI design system with proper dark mode support - Add modern component architecture with Button, Card, Input, Textarea - Include working theme toggle with localStorage persistence - Maintain all original functionality: projects, chapters, characters, AI assistant - Add proper TypeScript types and interfaces - Create Next.js project structure with proper configs - Implement unified Supabase client with TypeScript - Add responsive design with mobile sidebar - Include auto-save functionality with debouncing - Modern UI with smooth transitions and animations - Production-ready with proper error handling and loading states

--- a/Desktop/aiwritingtool-landingpage/package.json
+++ b/Desktop/aiwritingtool-landingpage/package.json
@@ -1,24 +1,46 @@
 {
-  "name": "Kalligram",
-  "version": "1.0.0",
-  "description": "An AI-powered writing tool for storytellers",
+  "name": "kalligram-typescript",
+  "version": "2.0.0",
+  "description": "An AI-powered writing tool for storytellers - TypeScript/React version",
   "main": "index.html",
   "engines": {
     "node": "18.x"
   },
   "scripts": {
-    "dev": "start-dev.bat",
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint",
+    "type-check": "tsc --noEmit",
     "build:css": "npx tailwindcss -i ./lib/tailwind.css -o ./lib/tailwind-built.css --watch",
-    "build:css-prod": "npx tailwindcss -i ./lib/tailwind.css -o ./lib/tailwind-built.css --minify",
-    "build": "npm run build:css-prod && node scripts/process-templates.js"
+    "build:css-prod": "npx tailwindcss -i ./lib/tailwind.css -o ./lib/tailwind-built.css --minify"
   },
   "dependencies": {
-    "node-fetch": "^2.6.9",
+    "next": "^14.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "@supabase/supabase-js": "^2.39.3",
-    "dotenv": "^16.4.1"
+    "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-select": "^2.0.0",
+    "@radix-ui/react-switch": "^1.0.3",
+    "@radix-ui/react-toast": "^1.1.5",
+    "@radix-ui/react-tooltip": "^1.0.7",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.0.0",
+    "lucide-react": "^0.294.0",
+    "next-themes": "^0.2.1",
+    "tailwind-merge": "^2.0.0",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
-    "netlify-cli": "^15.0.0",
+    "@types/node": "^20.0.0",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.0",
+    "typescript": "^5.0.0",
+    "eslint": "^8.0.0",
+    "eslint-config-next": "^14.0.0",
     "tailwindcss": "^3.4.0",
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.32"
